[metadata]
name = pegen4cp
version = attr: pegen4cp.__version__.__version__
description = A pegen modification that generates a one-file complete parser
long_description = file: README.md
long_description_content_type = text/markdown
author = nahco314
author_email = nahco3_ta@yahoo.co.jp
license = MIT

[options]
python_requires = >=3.8
packages = find:
install_requires =
    pegen

[options.entry_points]
console_scripts =
    pegen4cp = pegen4cp.main:main
